# hs-dbus-signature

./: .gitignore  .isort.cfg  .travis.yml  CHANGES.txt  LICENSE.txt  MANIFEST.in  Makefile  README.rst  check.py  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yaml  main.yml  weekly.yml
src/hs_dbus_signature/: __init__.py  _signature.py  _version.py
src/hypothesis_extra_dbus_signature/: __init__.py  _signature.py  _version.py
tests/: test_deterministic.py  test_hypothesis.py  test_strategy.py
