[metadata]
name = hs-dbus-signature
description = D-Bus signature hypothesis strategy generator
long_description = file: README.rst
author = Anne Mulhern
author_email = amulhern@redhat.com
url = https://github.com/stratis-storage/hs-dbus-signature
classifiers =
    Development Status :: 4 - Beta
    Framework :: Hypothesis
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Testing
license = MPL v2
platforms = any
install_requires = hypothesis
